crates/rulesteward-fapolicyd/tests/snapshots/F03__one-modern-many-legacy.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[F03] sev=Fatal line=3 col=1 span=81..106 :: file mixes modern (`:`) and legacy (no `:`) rule syntaxes - pick one
